[package]
name = "cpu-monitor"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]

[target.'cfg(unix)'.dependencies]
linux_proc = "0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["processthreadsapi", "minwindef"]

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
