[package]
name = "cpu-monitor"
description = "A library to get cpu usage over a given duration"
readme = "README.md"
version = "0.1.1"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
include = ["README.md", "Cargo.toml", "src/**/*.rs"]
repository = "https://github.com/derekdreery/cpu-monitor"
keywords = ["cpu", "monitor", "usage", "system", "info"]
categories = ["command-line-interface", "os"]
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "derekdreery/cpu-monitor" }
travis-ci = { repository = "derekdreery/cpu-monitor" }

[features]
default = []
ci = ["skeptic"]

[target.'cfg(unix)'.dependencies]
linux_proc = "0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["processthreadsapi", "minwindef"]

[build-dependencies.skeptic]
version = "0.13"
optional = true

[dev-dependencies]
skeptic = "0.13"

